tests/fixtures/failing/std_result_complex.wm
from "std/result/core" import { IOk, IErr };
from "std/result" import { map, mapError, andThen, withDefault, fold };

let inc = (n) => {
  add(n, 1)
};
let doubleIfOdd = (n) => {
  match(cmpInt(sub(n, mul(div(n, 2), 2)), 0)) {
    EQ => { IErr("even") },
    _ => { IOk(add(n, n)) }
  }
};

let strErr = (e) => {
  e
};

export let pipeline = () => {
  let start: IResult<Int, String> = IOk(10);
  let mapped = map(inc, start);
  let chained = andThen(doubleIfOdd, mapped);
  withDefault(0, chained)
};

export let foldBoth = () => {
  let start = IErr("boom");
  fold(
    (e) => {
      0
    },
    (v) => {
      add(v, 1)
    },
    start
  )
};
